@@ -70,6 +70,8 @@ Version 1.7.0-svn:
    * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
      now (bug #13170)
    * Added a "preload" WML event type.
+   * Added ability to change the share_view team attribute using [modify_side] tag. 
+     Be sure to use fog=yes for that side  (bug #13320)
    * Added support for Lua scripts in WML event actions ([lua] tag)
  * Miscellaneous and bugfixes:
    * Fixed compilation with -D_GLIBCXX_PARALLEL
